Adjust hero section's elements' font size

--- a/src/components/sections/Base.astro
+++ b/src/components/sections/Base.astro
@@ -12,7 +12,7 @@ const { title, description, class: _class } = Astro.props as Props;
   <div class="hero-content text-center">
     <div>
       <h1 class="section-title text-5xl font-bold">{title}</h1>
-      <p class="section-description text-xl md:py-8 py-6">{description}</p>
+      <p class="section-description text-xl py-7">{description}</p>
       <slot />
     </div>
   </div>
