--- a/src/components/sections/Home.astro
+++ b/src/components/sections/Home.astro
@@ -8,13 +8,13 @@ import ContentSection from './Base.astro';
   description="24 Vue coding challenges delivered one per day via email"
 >
   <div
-    class="flex md:flex-row flex-col justify-center md:items-start items-center gap-5"
+    class="flex md:flex-row flex-col justify-center md:items-start items-center gap-4"
   >
-    <button class="btn btn-primary lg:btn-lg">
+    <button class="btn btn-primary">
       <i class="fa-solid fa-circle-info mr-2"></i>
       Find out more
     </button>
-    <button class="btn btn-outline lg:btn-lg">
+    <button class="btn btn-outline">
       <i class="fa-solid fa-user-plus mr-2"></i>
       Subscribe
     </button>
