Rename Home section to Hero

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,8 +1,8 @@
 ---
 import Layout from '../layouts/Layout.astro';
-import Home from '../components/sections/Home.astro';
+import Hero from '../components/sections/Hero.astro';
 ---
 
 <Layout>
-  <Home />
+  <Hero />
 </Layout>
