--- a/src/components/sections/Base.astro
+++ b/src/components/sections/Base.astro
@@ -1,18 +1,25 @@
 ---
 export interface Props {
   title: string;
-  description: string;
-  class: string;
+  id: string;
+  description?: string;
+  class?: string;
 }
 
-const { title, description, class: _class } = Astro.props as Props;
+const { title, description, id, class: _class } = Astro.props as Props;
 ---
 
-<section class:list={['hero', _class]}>
-  <div class="hero-content text-center">
+<section id={id} class:list={['hero', _class]}>
+  <div class="hero-content">
     <div>
-      <h1 class="section-title text-5xl font-bold">{title}</h1>
-      <p class="section-description text-xl py-7">{description}</p>
+      <h2 class="section-title mt-8 text-5xl text-center font-bold">{title}</h2>
+      {
+        description && (
+          <p class="section-description text-2xl text-center py-7">
+            {description}
+          </p>
+        )
+      }
       <slot />
     </div>
   </div>
