Change wording in the title and description

--- a/src/components/sections/Hero.astro
+++ b/src/components/sections/Hero.astro
@@ -3,9 +3,10 @@ import ContentSection from './Base.astro';
 ---
 
 <ContentSection
+  id="hero"
   class="home-hero min-h-screen"
-  title="Advent of Vue 2022"
-  description="24 Vue coding challenges delivered one per day via email"
+  title="Advent of Vue"
+  description="24 Vue coding challenges delivered one-per-day via email"
 >
   <div
     class="flex md:flex-row flex-col justify-center md:items-start items-center gap-4"
@@ -16,7 +17,7 @@ import ContentSection from './Base.astro';
     </button>
     <button class="btn btn-outline">
       <i class="fa-solid fa-user-plus mr-2"></i>
-      Subscribe
+      Sign Up
     </button>
   </div>
 </ContentSection>
