Rename newsletter section to sign up

--- a/src/components/NavItems.astro
+++ b/src/components/NavItems.astro
@@ -20,9 +20,9 @@ const { class: _class } = Astro.props as Props;
     </a>
   </li>
   <li>
-    <a href="#newsletter">
-      <i class="fa-solid fa-envelope"></i>
-      Newsletter
+    <a href="#sign-up">
+      <i class="fa-solid fa-user-plus"></i>
+      Sign Up
     </a>
   </li>
 </ul>
