Import and use About and Meet The Team sections

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,8 +1,12 @@
 ---
 import Layout from '../layouts/Layout.astro';
 import Hero from '../components/sections/Hero.astro';
+import About from '../components/sections/About.astro';
+import MeetTheTeam from '../components/sections/MeetTheTeam.astro';
 ---
 
 <Layout>
   <Hero />
+  <About />
+  <MeetTheTeam />
 </Layout>
