Reword Daniel's description

--- a/src/components/sections/MeetTheTeam.astro
+++ b/src/components/sections/MeetTheTeam.astro
@@ -45,7 +45,7 @@ const team: TeamMember[] = [
   {
     name: 'Daniel Kelly',
     avatar: '/daniel.jpg',
-    description: 'Course teacher at Vue School',
+    description: 'Content creator and course teacher at Vue School',
     twitter: 'https://twitter.com/danielkelly_io',
     website: 'https://danielkelly.io'
   },
