Ensure CTA buttons are valid section links

--- a/src/components/sections/Hero.astro
+++ b/src/components/sections/Hero.astro
@@ -11,13 +11,13 @@ import ContentSection from './Base.astro';
   <div
     class="flex md:flex-row flex-col justify-center md:items-start items-center gap-4"
   >
-    <button class="btn btn-primary">
+    <a href="#about" class="btn btn-primary">
       <i class="fa-solid fa-circle-info mr-2"></i>
       Find out more
-    </button>
-    <button class="btn btn-outline">
+    </a>
+    <a href="#sign-up" class="btn btn-outline">
       <i class="fa-solid fa-user-plus mr-2"></i>
       Sign Up
-    </button>
+    </a>
   </div>
 </ContentSection>
