Create and use Sign Up section and page footer

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,10 +3,14 @@ import Layout from '../layouts/Layout.astro';
 import Hero from '../components/sections/Hero.astro';
 import About from '../components/sections/About.astro';
 import MeetTheTeam from '../components/sections/MeetTheTeam.astro';
+import SignUp from '../components/sections/SignUp.astro';
+import PageFooter from '../components/PageFooter.astro';
 ---
 
 <Layout>
   <Hero />
   <About />
   <MeetTheTeam />
+  <SignUp />
+  <PageFooter />
 </Layout>
