--- a/src/components/sections/About.astro
+++ b/src/components/sections/About.astro
@@ -2,7 +2,11 @@
 import ContentSection from './Base.astro';
 ---
 
-<ContentSection id="about" class="bg-gray-800" title="About">
+<ContentSection
+  id="about"
+  class="bg-gray-800 text-neutral-content"
+  title="About"
+>
   <div class="max-w-[min(65ch,85vw)] text-xl my-7 leading-loose">
     <p>
       Advent of Vue is a set of Christmas-themed coding puzzles that revolve
