--- a/src/components/sections/SignUp.astro
+++ b/src/components/sections/SignUp.astro
@@ -4,23 +4,25 @@ import ContentSection from './Base.astro';
 
 <ContentSection
   id="sign-up"
-  class="bg-gray-800"
+  class="bg-gray-800 text-neutral-content"
   title="Sign Up"
   description="Join the mailing list to receive all the challenges!"
 >
-  <div class="flex flex-col gap-6 justify-center items-center mt-4 mb-7">
+  <div class="flex flex-col gap-4 justify-center items-center mt-4 mb-7">
     <div class="form-control w-full max-w-xs">
       <label class="label justify-center" for="email">
-        <span class="label-text text-xl">Email address</span>
+        <span class="label-text text-xl text-neutral-content">
+          Email address
+        </span>
       </label>
       <input
         id="email"
         type="email"
         placeholder="iheartvue@example.com"
-        class="input input-lg input-bordered w-full max-w-xs"
+        class="input input-bordered w-full max-w-xs"
         required
       />
     </div>
-    <button class="btn btn-lg">Submit</button>
+    <button class="btn">Submit</button>
   </div>
 </ContentSection>
