--- a/src/components/sections/Base.astro
+++ b/src/components/sections/Base.astro
@@ -10,9 +10,28 @@ const { title, description, id, class: _class } = Astro.props as Props;
 ---
 
 <section id={id} class:list={['hero', _class]}>
-  <div class="hero-content">
+  <div class="hero-content flex-col md:flex-row-reverse gap-16">
+    {
+      id === 'hero' && (
+        <img
+          src="/aov-logo-transparent.png"
+          alt="Advent of Vue event logo"
+          class="md:block hidden max-w-sm"
+        />
+      )
+    }
     <div>
-      <h2 class="section-title mt-6 text-5xl text-center font-bold">{title}</h2>
+      {
+        id === 'hero' ? (
+          <h1 class="section-title mt-6 text-5xl text-center font-bold">
+            {title}
+          </h1>
+        ) : (
+          <h2 class="section-title mt-6 text-5xl text-center font-bold">
+            {title}
+          </h2>
+        )
+      }
       {
         description && (
           <p class="section-description text-2xl text-center py-7">
