--- a/src/components/PageFooter.astro
+++ b/src/components/PageFooter.astro
@@ -1,7 +1,12 @@
 <footer
   class="w-full bg-base-100 border-t-[1px] border-gray-600 p-6 text-xl text-center"
 >
-  Icons by
+  Logo by <a
+    href="https://twitter.com/mrtrimble2"
+    target="_blank"
+    rel="noopener noreferrer"
+    class="text-primary hover:text-primary-focus">Ryan Trimble</a
+  >. Icons by
   <a
     href="https://fontawesome.com"
     target="_blank"
