Move all avatars to respective subfolder

--- a/src/components/sections/MeetTheTeam.astro
+++ b/src/components/sections/MeetTheTeam.astro
@@ -15,13 +15,13 @@ const team: TeamMember[] = [
   {
     name: 'Maciej Pędzich',
     description: 'Vuenthusiast and Lipton Ice Tea junkie',
-    avatar: '/mac.png',
+    avatar: '/avatars/mac.png',
     twitter: 'https://twitter.com/MaciejPedzich',
     website: 'https://maciejpedzi.ch'
   },
   {
     name: 'Austin Gil',
-    avatar: '/austin.jpg',
+    avatar: '/avatars/austin.jpg',
     description: 'Creator of Vuetensils component library',
     twitter: 'https://twitter.com/heyAustinGil',
     twitch: 'https://www.twitch.tv/heyaustingil',
@@ -29,14 +29,14 @@ const team: TeamMember[] = [
   },
   {
     name: 'Michael Thiessen',
-    avatar: '/michael.png',
+    avatar: '/avatars/michael.png',
     description: 'Mastering Nuxt 3 course teacher',
     twitter: 'https://twitter.com/MichaelThiessen',
     website: 'https://michaelnthiessen.com'
   },
   {
     name: 'Matt Maribojoc',
-    avatar: '/matt.jpg',
+    avatar: '/avatars/matt.jpg',
     description: 'Vue Storefront DX Team and Creator of LearnVue',
     twitter: 'https://twitter.com/mattmaribojoc',
     youtube: 'https://www.youtube.com/learnvue',
@@ -44,14 +44,14 @@ const team: TeamMember[] = [
   },
   {
     name: 'Daniel Kelly',
-    avatar: '/daniel.jpg',
+    avatar: '/avatars/daniel.jpg',
     description: 'Content creator and course teacher at Vue School',
     twitter: 'https://twitter.com/danielkelly_io',
     website: 'https://danielkelly.io'
   },
   {
     name: 'Markus Oberlehner',
-    avatar: '/markus.jpg',
+    avatar: '/avatars/markus.jpg',
     description: 'Creator of vue-lazy-hydration library',
     twitter: 'https://twitter.com/MaOberlehner',
     website: 'https://markus.oberlehner.net'
