Further minor styling tweaks

--- a/src/components/PageFooter.astro
+++ b/src/components/PageFooter.astro
@@ -1,5 +1,5 @@
 <footer
-  class="w-full bg-base-100 border-t-[1px] border-gray-600 p-6 text-xl text-center"
+  class="w-full bg-base-100 border-t-[1px] border-gray-600 p-4 text-lg text-center"
 >
   Logo by <a
     href="https://twitter.com/mrtrimble2"
@@ -17,5 +17,10 @@
     target="_blank"
     rel="noopener noreferrer"
     class="text-primary hover:text-primary-focus">Astro</a
+  >. Hosted on <a
+    href="https://render.com"
+    target="_blank"
+    rel="noopener noreferrer"
+    class="text-primary hover:text-primary-focus">Render</a
   >.
 </footer>
