Replace PageFooter component with Credits

--- a/src/components/NavItems.astro
+++ b/src/components/NavItems.astro
@@ -25,4 +25,10 @@ const { class: _class } = Astro.props as Props;
       Sign Up
     </a>
   </li>
+  <li>
+    <a href="#credits">
+      <i class="fa-solid fa-star"></i>
+      Credits
+    </a>
+  </li>
 </ul>
