--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -4,7 +4,7 @@ import Hero from '../components/sections/Hero.astro';
 import About from '../components/sections/About.astro';
 import MeetTheTeam from '../components/sections/MeetTheTeam.astro';
 import SignUp from '../components/sections/SignUp.astro';
-import PageFooter from '../components/PageFooter.astro';
+import Credits from '../components/sections/Credits.astro';
 ---
 
 <Layout>
@@ -12,5 +12,5 @@ import PageFooter from '../components/PageFooter.astro';
   <About />
   <MeetTheTeam />
   <SignUp />
-  <PageFooter />
+  <Credits />
 </Layout>
