Introduce various a11y tweaks

--- a/src/components/sections/About.astro
+++ b/src/components/sections/About.astro
@@ -2,27 +2,22 @@
 import ContentSection from './Base.astro';
 ---
 
-<ContentSection
-  id="about"
-  class="bg-gray-800 text-neutral-content"
-  title="About"
->
+<ContentSection id="about" class="bg-base-200 text-inherit" title="About">
   <div class="max-w-[min(65ch,85vw)] text-xl my-7 leading-loose">
     <p>
       Advent of Vue is a set of Christmas-themed coding puzzles that revolve
       around building small-scale Vue components and applications.
     </p>
-    <p class="mt-5">
+    <p class="mt-6">
       Every day from December 1 to December 24, you receive an email with a
       problem description, additional screenshots and/or recordings of a target
       application, as well as a starter project on Stackblitz, which serves as a
       baseline for your solution.
     </p>
-    <p class="mt-5">
+    <p class="mt-6">
       It doesn't matter if you're just getting started with this framework or if
-      you're a seasoned developer! This event is for everyone who wants to test
-      their Vue skills by applying them in a wide variety of close-to-real-life
-      scenarios.
+      you're a seasoned developer. This event is for everyone who wants to test
+      their Vue skills by applying them in a wide variety of fun scenarios.
     </p>
   </div>
 </ContentSection>
