--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -12,6 +12,7 @@ import NavItems from '../components/NavItems.astro';
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="generator" content={Astro.generator} />
     <link rel="canonical" href="https://adventofvue.com" />
+    <!-- Why bother adding all these icons? Well, why not. -->
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
     <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
@@ -87,5 +88,10 @@ import NavItems from '../components/NavItems.astro';
     <main>
       <slot />
     </main>
+    <footer
+      class="w-full bg-base-100 border-t-[1px] border-gray-600 p-4 text-lg text-center"
+    >
+      &copy; 2022-present Advent of Vue Team
+    </footer>
   </body>
 </html>
