--- a/src/components/NavItems.astro
+++ b/src/components/NavItems.astro
@@ -9,25 +9,25 @@ const { class: _class } = Astro.props as Props;
 <ul class={_class}>
   <li>
     <a href="#about">
-      <i class="fa-solid fa-circle-info"></i>
+      <i class="fa-solid fa-circle-info" aria-hidden="true"></i>
       About
     </a>
   </li>
   <li>
     <a href="#meet-the-team">
-      <i class="fa-solid fa-users"></i>
+      <i class="fa-solid fa-users" aria-hidden="true"></i>
       Meet The Team
     </a>
   </li>
   <li>
     <a href="#sign-up">
-      <i class="fa-solid fa-user-plus"></i>
+      <i class="fa-solid fa-user-plus" aria-hidden="true"></i>
       Sign Up
     </a>
   </li>
   <li>
     <a href="#credits">
-      <i class="fa-solid fa-star"></i>
+      <i class="fa-solid fa-star" aria-hidden="true"></i>
       Credits
     </a>
   </li>
