Ensure aria-label uses member.name

--- a/src/components/sections/MeetTheTeam.astro
+++ b/src/components/sections/MeetTheTeam.astro
@@ -106,14 +106,14 @@ const team: TeamMember[] = [
               <a
                 href={member.twitter}
                 class="hover:text-[#1da1f2] focus:text-[#1da1f2]"
-                aria-label={`${member.twitter}'s Twitter page'`}
+                aria-label={`${member.name}'s Twitter page'`}
               >
                 <i class="fa-brands fa-twitter" />
               </a>
               <a
                 href={member.website}
                 class="hover:text-primary focus:text-primary"
-                aria-label={`${member.twitter}'s website`}
+                aria-label={`${member.name}'s website`}
               >
                 <i class="fa-solid fa-globe" />
               </a>
