--- a/src/components/sections/Credits.astro
+++ b/src/components/sections/Credits.astro
@@ -40,14 +40,25 @@ import ContentSection from './Base.astro';
         Render
       </a>
     </p>
-    <p class="mt-3">
-      Special thanks to
-      <a
-        href="https://twitter.com/heyAustinGil"
-        class="dark:text-primary text-blue-500 underline hover:text-primary-focus"
-      >
-        Austin Gil
-      </a>
-    </p>
+    <p class="mt-3">Special thanks to:</p><ul>
+      <li>
+        <a
+          href="https://twitter.com/heyAustinGil"
+          class="dark:text-primary text-blue-500 underline hover:text-primary-focus"
+        >
+          Austin Gil
+        </a>
+        - logistical support
+      </li>
+      <li>
+        <a
+          href="https://twitter.com/BenDMyers"
+          class="dark:text-primary text-blue-500 underline hover:text-primary-focus"
+        >
+          Ben Myers
+        </a>
+        - accessibility support
+      </li>
+    </ul>
   </div>
 </ContentSection>
