Remove CTA button icons

--- a/src/components/sections/Hero.astro
+++ b/src/components/sections/Hero.astro
@@ -11,15 +11,11 @@ import ContentSection from './Base.astro';
   <div
     class="flex md:flex-row flex-col justify-center md:items-start items-center gap-4"
   >
-    <a href="#about" class="btn btn-primary">
-      <i class="fa-solid fa-circle-info mr-2" aria-hidden="true"></i>
-      Find out more
-    </a>
+    <a href="#about" class="btn btn-primary font-bold">Learn more</a>
     <a
       href="#sign-up"
       class="btn btn-outline focus:outline-2 focus:outline-primary"
     >
-      <i class="fa-solid fa-user-plus mr-2" aria-hidden="true"></i>
       Sign up
     </a>
   </div>
