Update Michael's tagline

--- a/src/components/sections/MeetTheTeam.astro
+++ b/src/components/sections/MeetTheTeam.astro
@@ -21,7 +21,7 @@ const team: TeamMember[] = [
   {
     name: 'Michael Thiessen',
     avatar: '/avatars/michael.png',
-    tagline: 'Mastering Nuxt 3 course teacher',
+    tagline: 'Vue content creator and educator',
     twitter: 'https://twitter.com/MichaelThiessen',
     website: 'https://michaelnthiessen.com'
   },
