--- a/src/components/sections/Credits.astro
+++ b/src/components/sections/Credits.astro
@@ -45,19 +45,17 @@ import ContentSection from './Base.astro';
       <a
         href="https://twitter.com/heyAustinGil"
         class="dark:text-primary text-blue-500 underline hover:text-primary-focus"
+        >Austin Gil</a
       >
-        Austin Gil
-      </a>
-      - logistical support
+      for logistical support
     </p>
     <p class="mt-3">
       <a
         href="https://twitter.com/BenDMyers"
         class="dark:text-primary text-blue-500 underline hover:text-primary-focus"
+        >Ben Myers</a
       >
-        Ben Myers
-      </a>
-      - accessibility support
+      for accessibility support
     </p>
   </div>
 </ContentSection>
