Add Plausible analytics integration

--- a/src/components/sections/MeetTheTeam.astro
+++ b/src/components/sections/MeetTheTeam.astro
@@ -66,7 +66,7 @@ const team: TeamMember[] = [
     tagline: 'Vuenthusiast commonly known as "Mac"',
     avatar: '/avatars/mac.png',
     twitter: 'https://twitter.com/MaciejPedzich',
-    website: 'https://maciejpedzi.ch'
+    website: 'https://github.com/maciejpedzich'
   }
 ];
 ---
@@ -85,9 +85,9 @@ const team: TeamMember[] = [
           <figure class="max-w-md h-auto p-5 pb-2">
             <img
               class="rounded-md shadow-2xl"
+              loading="lazy"
               src={member.avatar}
               alt={`${member.name}'s avatar`}
-              loading="lazy"
             />
           </figure>
           <div class="card-body items-stretch">
