--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -56,6 +56,11 @@ import NavItems from '../components/NavItems.astro';
       property="twitter:image:alt"
       content="Green gift box with a dark gray ribbon and advent calendar boxes with days from 1 to 24."
     />
+    <script
+      defer
+      data-domain="adventofvue.com"
+      src="https://plausible.io/js/plausible.js"
+    ></script>
   </head>
   <body>
     <header
