--- a/src/components/sections/SignUp.astro
+++ b/src/components/sections/SignUp.astro
@@ -8,19 +8,47 @@ import ContentSection from './Base.astro';
   title="Sign Up"
   description="Join the mailing list to receive all the challenges!"
 >
-  <div class="flex flex-col gap-4 justify-center items-center mt-4 mb-7">
+  <form
+    class="flex flex-col gap-4 justify-center items-center mt-4 mb-7"
+    action="https://www.getrevue.co/profile/AdventOfVue/add_subscriber"
+    method="post"
+    id="revue-form"
+    name="revue-form"
+    target="_blank"
+  >
     <div class="form-control w-full max-w-xs">
-      <label class="label justify-center" for="email">
-        <span class="label-text text-xl text-inherit">Email address</span>
-      </label>
+      <label class="label justify-center" for="member_email"
+        >Email address</label
+      >
       <input
-        id="email"
-        type="email"
-        placeholder="iheartvue@example.com"
         class="input input-bordered w-full max-w-xs"
+        placeholder="E.g. iheartvue@example.com"
+        type="email"
+        name="member[email]"
+        id="member_email"
         required
       />
     </div>
-    <button class="btn focus:outline-2 focus:outline-primary">Submit</button>
-  </div>
+    <div class="revue-form-actions">
+      <button
+        class="btn focus:outline-2 focus:outline-primary"
+        type="submit"
+        name="member[subscribe]"
+        id="member_submit"
+      >
+        Subscribe
+      </button>
+    </div>
+    <div class="text-base">
+      By subscribing, you agree with Revue's <a
+        class="dark:text-primary text-blue-500 underline hover:text-primary-focus"
+        target="_blank"
+        href="https://www.getrevue.co/terms">Terms of Service</a
+      > and <a
+        class="dark:text-primary text-blue-500 underline hover:text-primary-focus"
+        target="_blank"
+        href="https://www.getrevue.co/privacy">Privacy Policy</a
+      >.
+    </div>
+  </form>
 </ContentSection>
