--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -11,16 +11,10 @@ import NavItems from '../components/NavItems.astro';
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="generator" content={Astro.generator} />
-    <link rel="canonical" href="https://adventofvue.com" />
-    <!-- Why bother adding all these icons? Well, why not. -->
-    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
-    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
-    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
-    <link rel="manifest" href="/site.webmanifest" />
-    <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#42b883" />
-    <meta name="msapplication-TileColor" content="#42b883" />
     <meta name="theme-color" content="#42b883" />
-    <title>Advent of Vue</title>
+    <link rel="canonical" href="https://adventofvue.com" />
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
+    <title>Advent Of Vue</title>
     <meta
       name="description"
       content="24 Vue coding challenges delivered one-per-day via email"
@@ -28,7 +22,7 @@ import NavItems from '../components/NavItems.astro';
     <meta name="theme-color" content="#42b883" />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://adventofvue.com" />
-    <meta property="og:title" content="Advent of Vue" />
+    <meta property="og:title" content="Advent Of Vue" />
     <meta
       property="og:description"
       content="24 Vue coding challenges delivered one-per-day via email"
@@ -43,7 +37,7 @@ import NavItems from '../components/NavItems.astro';
     />
     <meta property="twitter:card" content="summary_large_image" />
     <meta property="twitter:url" content="https://adventofvue.com" />
-    <meta property="twitter:title" content="Advent of Vue" />
+    <meta property="twitter:title" content="Advent Of Vue" />
     <meta
       property="twitter:description"
       content="24 Vue coding challenges delivered one-per-day via email"
@@ -72,7 +66,7 @@ import NavItems from '../components/NavItems.astro';
             href="#hero"
             class="lg:mx-5 mx-0 btn btn-ghost normal-case text-xl"
           >
-            Advent of Vue
+            Advent Of Vue
           </a>
         </div>
         <div class="lg:flex hidden">
@@ -96,7 +90,7 @@ import NavItems from '../components/NavItems.astro';
     <footer
       class="w-full bg-base-100 border-t-[1px] border-gray-600 p-4 text-lg text-center"
     >
-      &copy; 2022-present Advent of Vue Team
+      &copy; 2022-present Advent Of Vue Team
     </footer>
   </body>
 </html>
