Capitalise "Of" in event's name

--- a/src/components/sections/Base.astro
+++ b/src/components/sections/Base.astro
@@ -36,7 +36,7 @@ const { title, description, id, class: _class } = Astro.props as Props;
       id === 'hero' && (
         <img
           src="/aov-logo-transparent.png"
-          alt="Advent of Vue event logo"
+          alt="Advent Of Vue event logo"
           class="md:block hidden max-w-sm"
         />
       )
