--- a/src/components/sections/MeetTheTeam.astro
+++ b/src/components/sections/MeetTheTeam.astro
@@ -74,7 +74,7 @@ const team: TeamMember[] = [
 <ContentSection
   id="meet-the-team"
   title="Meet The Team"
-  description="Advent of Vue was made possible by these amazing people:"
+  description="Advent Of Vue was made possible by these amazing people:"
 >
   <div
     class="grid gap-11 grid-cols-1 md:grid-cols-2 lg:grid-cols-4 lg:m-10 m-8 z-10"
