Add Plausible Analytics atrribution

--- a/src/components/sections/Credits.astro
+++ b/src/components/sections/Credits.astro
@@ -23,6 +23,15 @@ import ContentSection from './Base.astro';
       </a>
     </p>
     <p class="mt-3">
+      Analytics by
+      <a
+        href="https://plausible.io"
+        class="dark:text-primary text-blue-500 underline hover:text-primary-focus"
+      >
+        Plausible
+      </a>
+    </p>
+    <p class="mt-3">
       Built with
       <a
         href="https://astro.build"
