Increase the gap between header and description

--- a/src/components/sections/About.astro
+++ b/src/components/sections/About.astro
@@ -4,7 +4,7 @@ import ContentSection from './Base.astro';
 
 <ContentSection id="about" class="bg-base-200 text-inherit" title="About">
   <div class="max-w-[min(65ch,85vw)] text-xl my-7 leading-loose">
-    <p>
+    <p class="mt-8">
       Advent Of Vue is a set of Christmas-themed coding puzzles that revolve
       around building small-scale Vue components and applications.
     </p>
