Ensure event logo appears only on large screens

--- a/src/components/sections/Base.astro
+++ b/src/components/sections/Base.astro
@@ -37,7 +37,7 @@ const { title, description, id, class: _class } = Astro.props as Props;
         <img
           src="/aov-logo-transparent.png"
           alt="Advent Of Vue event logo"
-          class="md:block hidden max-w-sm"
+          class="lg:block hidden max-w-sm"
         />
       )
     }
