Ensure event title always displays inline

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -64,7 +64,7 @@ import NavItems from '../components/NavItems.astro';
         <div class="lg:flex-none flex-1">
           <a
             href="#hero"
-            class="lg:mx-5 mx-0 btn btn-ghost normal-case text-xl"
+            class="lg:mx-5 mx-0 btn btn-ghost normal-case text-xl whitespace-nowrap overflow-hidden"
           >
             Advent Of Vue
           </a>
