Improve focus indication for nav items and form

--- a/src/components/sections/SignUp.astro
+++ b/src/components/sections/SignUp.astro
@@ -20,7 +20,7 @@ import ContentSection from './Base.astro';
         Email address
       </label>
       <input
-        class="input input-bordered w-full max-w-xs"
+        class="input input-bordered w-full focus:outline-2 focus:outline-primary"
         placeholder="iheartvue@example.com"
         type="email"
         name="member[email]"
