--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -11,6 +11,10 @@ body {
   @apply m-0 p-0 bg-base-300;
 }
 
+li > a {
+  @apply active:text-slate-900 focus:bg-transparent focus:outline-2 focus:outline-primary
+}
+
 .menu-horizontal :where(li) * {
   @apply rounded-lg;
 }
