Add Twitter page link

--- a/src/components/NavItems.astro
+++ b/src/components/NavItems.astro
@@ -31,4 +31,14 @@ const { class: _class } = Astro.props as Props;
       Credits
     </a>
   </li>
+  <li>
+    <a
+      href="https://twitter.com/AdventOfVue"
+      target="_blank"
+      rel="noreferrer noopener"
+    >
+      <i class="fa-brands fa-twitter" aria-hidden="true"></i>
+      Twitter
+    </a>
+  </li>
 </ul>
