Upload meta image to the site itself

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -29,7 +29,7 @@ import NavItems from '../components/NavItems.astro';
     />
     <meta
       property="og:image"
-      content="https://media.discordapp.net/attachments/921388273258070027/1030935541795000471/aov-banner.png"
+      content="https://adventofvue.com/aov-banner.png"
     />
     <meta
       property="og:image:alt"
@@ -37,6 +37,7 @@ import NavItems from '../components/NavItems.astro';
     />
     <meta property="twitter:card" content="summary_large_image" />
     <meta property="twitter:url" content="https://adventofvue.com" />
+    <meta name="twitter:creator" content="@AdventOfVue" />
     <meta property="twitter:title" content="Advent Of Vue" />
     <meta
       property="twitter:description"
@@ -44,7 +45,7 @@ import NavItems from '../components/NavItems.astro';
     />
     <meta
       property="twitter:image"
-      content="https://media.discordapp.net/attachments/921388273258070027/1030935541795000471/aov-banner.png"
+      content="https://adventofvue.com/aov-banner.png"
     />
     <meta
       property="twitter:image:alt"
