--- a/src/components/sections/About.astro
+++ b/src/components/sections/About.astro
@@ -5,7 +5,7 @@ import ContentSection from './Base.astro';
 <ContentSection id="about" class="bg-base-200 text-inherit" title="About">
   <div class="max-w-[min(65ch,85vw)] text-xl my-7 leading-loose">
     <p class="mt-8">
-      Advent Of Vue is a set of Christmas-themed coding puzzles that revolve
+      Advent Of Vue is a set of Holiday-themed coding puzzles that revolve
       around building small-scale Vue components and applications.
     </p>
     <p class="mt-6">
